# project-agent

./: .env.example  .gitignore  CHAT_ORDER_FIXES.md  CHAT_TIMELINE_IMPROVEMENTS.md  CLAUDE.md  ENV_SETUP.md  IMPLEMENTATION_SUMMARY.md  PIPELINE_STATUS_SYNC_FIX.md  README.md  TODO.md  check-dev.py  dev.py  test_bid_build.py  test_bid_build_workflow.py  test_offline_bid_build.py  test_outline_extractor.py  test_real_bid_build.py  test_workflow_integration.py
backend/: .env.example  __init__.py  check_env.py  check_env_loading.py  dev.py  main.py  openrouter_models.md  pyproject.toml
backend/agents/: assembler_compliance.py  base.py  bid_assembler.py  bid_format_agent.py  bid_generator.py  coordinator.py  diff_table_builder.py  document_parser.py  final_qa.py  key_extraction.py  outline_extractor.py  plan_outliner.py  plan_writer.py  sanity_checker.py  solution_optimizer.py  spec_extractor.py  structure_extractor.py
backend/app_core/: config.py  llm_client.py
backend/prompts/: bid_assembler.md  plan_outliner.md  sanity_checker.md  spec_extractor.md  structure_extractor.md
backend/services/: file_processor.py  session_manager.py
backend/sessions/: 08e6fbba-0f21-4ffe-93e5-6d19a21789d0.json  0a1baf02-7331-40b5-ae02-e21d29b3aca1.json  0d644f24-531b-472b-9c48-37e5cb5e5624.json  0fb117c1-220e-41b1-b411-af9fda6f7dfb.json  14dd6dbd-0e81-4524-ab7c-d8ee3b3edeef.json  17556951-d49c-4aa9-8df0-09fd54e89865.json  2517b297-c6c3-4a66-95b4-b2f6d757f345.json  277efaa7-48b4-449d-8447-1b6e8a571ae7.json  27b0467a-c48b-4cf6-8713-30fb10e306de.json  (+39 more)
backend/utils/: extract_bid_section.py  (+1 more)
(+50 files in other folders)
